src/perl6_curl.h

#include <curl/curl.h>
#include <curl/easy.h>
#include <curl/multi.h>

int perl6_curlinfo_text ();
int perl6_curlinfo_header_in ();
int perl6_curlinfo_header_out ();
int perl6_curlinfo_data_in ();
int perl6_curlinfo_data_out ();
int perl6_curlinfo_ssl_data_in ();
int perl6_curlinfo_ssl_data_out ();
int perl6_curlinfo_end ();
int perl6_curle_ok ();
int perl6_curle_unsupported_protocol ();
int perl6_curle_failed_init ();
int perl6_curle_url_malformat ();
int perl6_curle_not_built_in ();
int perl6_curle_couldnt_resolve_proxy ();
int perl6_curle_couldnt_resolve_host ();
int perl6_curle_couldnt_connect ();
int perl6_curle_ftp_weird_server_reply ();
int perl6_curle_remote_access_denied ();
int perl6_curle_ftp_accept_failed ();
int perl6_curle_ftp_weird_pass_reply ();
int perl6_curle_ftp_accept_timeout ();
int perl6_curle_ftp_weird_pasv_reply ();
int perl6_curle_ftp_weird_227_format ();
int perl6_curle_ftp_cant_get_host ();
int perl6_curle_obsolete16 ();
int perl6_curle_ftp_couldnt_set_type ();
int perl6_curle_partial_file ();
int perl6_curle_ftp_couldnt_retr_file ();
int perl6_curle_obsolete20 ();
int perl6_curle_quote_error ();
int perl6_curle_http_returned_error ();
int perl6_curle_write_error ();
int perl6_curle_obsolete24 ();
int perl6_curle_upload_failed ();
int perl6_curle_read_error ();
int perl6_curle_out_of_memory ();
int perl6_curle_operation_timedout ();
int perl6_curle_obsolete29 ();
int perl6_curle_ftp_port_failed ();
int perl6_curle_ftp_couldnt_use_rest ();
int perl6_curle_obsolete32 ();
int perl6_curle_range_error ();
int perl6_curle_http_post_error ();
int perl6_curle_ssl_connect_error ();
int perl6_curle_bad_download_resume ();
int perl6_curle_file_couldnt_read_file ();
int perl6_curle_ldap_cannot_bind ();
int perl6_curle_ldap_search_failed ();
int perl6_curle_obsolete40 ();
int perl6_curle_function_not_found ();
int perl6_curle_aborted_by_callback ();
int perl6_curle_bad_function_argument ();
int perl6_curle_obsolete44 ();
int perl6_curle_interface_failed ();
int perl6_curle_obsolete46 ();
int perl6_curle_too_many_redirects ();
int perl6_curle_unknown_option ();
int perl6_curle_telnet_option_syntax ();
int perl6_curle_obsolete50 ();
int perl6_curle_peer_failed_verification ();
int perl6_curle_got_nothing ();
int perl6_curle_ssl_engine_notfound ();
int perl6_curle_ssl_engine_setfailed ();
int perl6_curle_send_error ();
int perl6_curle_recv_error ();
int perl6_curle_obsolete57 ();
int perl6_curle_ssl_certproblem ();
int perl6_curle_ssl_cipher ();
int perl6_curle_ssl_cacert ();
int perl6_curle_bad_content_encoding ();
int perl6_curle_ldap_invalid_url ();
int perl6_curle_filesize_exceeded ();
int perl6_curle_use_ssl_failed ();
int perl6_curle_send_fail_rewind ();
int perl6_curle_ssl_engine_initfailed ();
int perl6_curle_login_denied ();
int perl6_curle_tftp_notfound ();
int perl6_curle_tftp_perm ();
int perl6_curle_remote_disk_full ();
int perl6_curle_tftp_illegal ();
int perl6_curle_tftp_unknownid ();
int perl6_curle_remote_file_exists ();
int perl6_curle_tftp_nosuchuser ();
int perl6_curle_conv_failed ();
int perl6_curle_conv_reqd ();
int perl6_curle_ssl_cacert_badfile ();
int perl6_curle_remote_file_not_found ();
int perl6_curle_ssh ();
int perl6_curle_ssl_shutdown_failed ();
int perl6_curle_again ();
int perl6_curle_ssl_crl_badfile ();
int perl6_curle_ssl_issuer_error ();
int perl6_curle_ftp_pret_failed ();
int perl6_curle_rtsp_cseq_error ();
int perl6_curle_rtsp_session_error ();
int perl6_curle_ftp_bad_file_list ();
int perl6_curle_chunk_failed ();
int perl6_curlopt_file ();
int perl6_curlopt_url ();
int perl6_curlopt_port ();
int perl6_curlopt_proxy ();
int perl6_curlopt_userpwd ();
int perl6_curlopt_proxyuserpwd ();
int perl6_curlopt_range ();
int perl6_curlopt_infile ();
int perl6_curlopt_errorbuffer ();
int perl6_curlopt_writefunction ();
int perl6_curlopt_readfunction ();
int perl6_curlopt_timeout ();
int perl6_curlopt_infilesize ();
int perl6_curlopt_postfields ();
int perl6_curlopt_referer ();
int perl6_curlopt_ftpport ();
int perl6_curlopt_useragent ();
int perl6_curlopt_low_speed_limit ();
int perl6_curlopt_low_speed_time ();
int perl6_curlopt_resume_from ();
int perl6_curlopt_cookie ();
int perl6_curlopt_httpheader ();
int perl6_curlopt_httppost ();
int perl6_curlopt_sslcert ();
int perl6_curlopt_keypasswd ();
int perl6_curlopt_crlf ();
int perl6_curlopt_quote ();
int perl6_curlopt_writeheader ();
int perl6_curlopt_cookiefile ();
int perl6_curlopt_sslversion ();
int perl6_curlopt_timecondition ();
int perl6_curlopt_timevalue ();
int perl6_curlopt_customrequest ();
int perl6_curlopt_stderr ();
int perl6_curlopt_postquote ();
int perl6_curlopt_writeinfo ();
int perl6_curlopt_verbose ();
int perl6_curlopt_header ();
int perl6_curlopt_noprogress ();
int perl6_curlopt_nobody ();
int perl6_curlopt_failonerror ();
int perl6_curlopt_upload ();
int perl6_curlopt_post ();
int perl6_curlopt_dirlistonly ();
int perl6_curlopt_append ();
int perl6_curlopt_netrc ();
int perl6_curlopt_followlocation ();
int perl6_curlopt_transfertext ();
int perl6_curlopt_put ();
int perl6_curlopt_progressfunction ();
int perl6_curlopt_progressdata ();
int perl6_curlopt_autoreferer ();
int perl6_curlopt_proxyport ();
int perl6_curlopt_postfieldsize ();
int perl6_curlopt_httpproxytunnel ();
int perl6_curlopt_interface ();
int perl6_curlopt_krblevel ();
int perl6_curlopt_ssl_verifypeer ();
int perl6_curlopt_cainfo ();
int perl6_curlopt_maxredirs ();
int perl6_curlopt_filetime ();
int perl6_curlopt_telnetoptions ();
int perl6_curlopt_maxconnects ();
int perl6_curlopt_closepolicy ();
int perl6_curlopt_fresh_connect ();
int perl6_curlopt_forbid_reuse ();
int perl6_curlopt_random_file ();
int perl6_curlopt_egdsocket ();
int perl6_curlopt_connecttimeout ();
int perl6_curlopt_headerfunction ();
int perl6_curlopt_httpget ();
int perl6_curlopt_ssl_verifyhost ();
int perl6_curlopt_cookiejar ();
int perl6_curlopt_ssl_cipher_list ();
int perl6_curlopt_http_version ();
int perl6_curlopt_ftp_use_epsv ();
int perl6_curlopt_sslcerttype ();
int perl6_curlopt_sslkey ();
int perl6_curlopt_sslkeytype ();
int perl6_curlopt_sslengine ();
int perl6_curlopt_sslengine_default ();
int perl6_curlopt_dns_use_global_cache ();
int perl6_curlopt_dns_cache_timeout ();
int perl6_curlopt_prequote ();
int perl6_curlopt_debugfunction ();
int perl6_curlopt_debugdata ();
int perl6_curlopt_cookiesession ();
int perl6_curlopt_capath ();
int perl6_curlopt_buffersize ();
int perl6_curlopt_nosignal ();
int perl6_curlopt_share ();
int perl6_curlopt_proxytype ();
int perl6_curlopt_accept_encoding ();
int perl6_curlopt_private ();
int perl6_curlopt_http200aliases ();
int perl6_curlopt_unrestricted_auth ();
int perl6_curlopt_ftp_use_eprt ();
int perl6_curlopt_httpauth ();
int perl6_curlopt_ssl_ctx_function ();
int perl6_curlopt_ssl_ctx_data ();
int perl6_curlopt_ftp_create_missing_dirs ();
int perl6_curlopt_proxyauth ();
int perl6_curlopt_ftp_response_timeout ();
int perl6_curlopt_ipresolve ();
int perl6_curlopt_maxfilesize ();
int perl6_curlopt_infilesize_large ();
int perl6_curlopt_resume_from_large ();
int perl6_curlopt_maxfilesize_large ();
int perl6_curlopt_netrc_file ();
int perl6_curlopt_use_ssl ();
int perl6_curlopt_postfieldsize_large ();
int perl6_curlopt_tcp_nodelay ();
int perl6_curlopt_ftpsslauth ();
int perl6_curlopt_ioctlfunction ();
int perl6_curlopt_ioctldata ();
int perl6_curlopt_ftp_account ();
int perl6_curlopt_cookielist ();
int perl6_curlopt_ignore_content_length ();
int perl6_curlopt_ftp_skip_pasv_ip ();
int perl6_curlopt_ftp_filemethod ();
int perl6_curlopt_localport ();
int perl6_curlopt_localportrange ();
int perl6_curlopt_connect_only ();
int perl6_curlopt_conv_from_network_function ();
int perl6_curlopt_conv_to_network_function ();
int perl6_curlopt_conv_from_utf8_function ();
int perl6_curlopt_max_send_speed_large ();
int perl6_curlopt_max_recv_speed_large ();
int perl6_curlopt_ftp_alternative_to_user ();
int perl6_curlopt_sockoptfunction ();
int perl6_curlopt_sockoptdata ();
int perl6_curlopt_ssl_sessionid_cache ();
int perl6_curlopt_ssh_auth_types ();
int perl6_curlopt_ssh_public_keyfile ();
int perl6_curlopt_ssh_private_keyfile ();
int perl6_curlopt_ftp_ssl_ccc ();
int perl6_curlopt_timeout_ms ();
int perl6_curlopt_connecttimeout_ms ();
int perl6_curlopt_http_transfer_decoding ();
int perl6_curlopt_http_content_decoding ();
int perl6_curlopt_new_file_perms ();
int perl6_curlopt_new_directory_perms ();
int perl6_curlopt_postredir ();
int perl6_curlopt_ssh_host_public_key_md5 ();
int perl6_curlopt_opensocketfunction ();
int perl6_curlopt_opensocketdata ();
int perl6_curlopt_copypostfields ();
int perl6_curlopt_proxy_transfer_mode ();
int perl6_curlopt_seekfunction ();
int perl6_curlopt_seekdata ();
int perl6_curlopt_crlfile ();
int perl6_curlopt_issuercert ();
int perl6_curlopt_address_scope ();
int perl6_curlopt_certinfo ();
int perl6_curlopt_username ();
int perl6_curlopt_password ();
int perl6_curlopt_proxyusername ();
int perl6_curlopt_proxypassword ();
int perl6_curlopt_noproxy ();
int perl6_curlopt_tftp_blksize ();
int perl6_curlopt_socks5_gssapi_service ();
int perl6_curlopt_socks5_gssapi_nec ();
int perl6_curlopt_protocols ();
int perl6_curlopt_redir_protocols ();
int perl6_curlopt_ssh_knownhosts ();
int perl6_curlopt_ssh_keyfunction ();
int perl6_curlopt_ssh_keydata ();
int perl6_curlopt_mail_from ();
int perl6_curlopt_mail_rcpt ();
int perl6_curlopt_ftp_use_pret ();
int perl6_curlopt_rtsp_request ();
int perl6_curlopt_rtsp_session_id ();
int perl6_curlopt_rtsp_stream_uri ();
int perl6_curlopt_rtsp_transport ();
int perl6_curlopt_rtsp_client_cseq ();
int perl6_curlopt_rtsp_server_cseq ();
int perl6_curlopt_interleavedata ();
int perl6_curlopt_interleavefunction ();
int perl6_curlopt_wildcardmatch ();
int perl6_curlopt_chunk_bgn_function ();
int perl6_curlopt_chunk_end_function ();
int perl6_curlopt_fnmatch_function ();
int perl6_curlopt_chunk_data ();
int perl6_curlopt_fnmatch_data ();
int perl6_curlopt_resolve ();
int perl6_curlopt_tlsauth_username ();
int perl6_curlopt_tlsauth_password ();
int perl6_curlopt_tlsauth_type ();
int perl6_curlopt_transfer_encoding ();
int perl6_curlopt_closesocketfunction ();
int perl6_curlopt_closesocketdata ();
int perl6_curlopt_gssapi_delegation ();
int perl6_curlopt_dns_servers ();
int perl6_curlopt_accepttimeout_ms ();
int perl6_curlopt_tcp_keepalive ();
int perl6_curlopt_tcp_keepidle ();
int perl6_curlopt_tcp_keepintvl ();
int perl6_curlopt_ssl_options ();
int perl6_curlopt_mail_auth ();
int perl6_curlopt_lastentry ();
int perl6_curlinfo_none ();
int perl6_curlinfo_effective_url ();
int perl6_curlinfo_response_code ();
int perl6_curlinfo_total_time ();
int perl6_curlinfo_namelookup_time ();
int perl6_curlinfo_connect_time ();
int perl6_curlinfo_pretransfer_time ();
int perl6_curlinfo_size_upload ();
int perl6_curlinfo_size_download ();
int perl6_curlinfo_speed_download ();
int perl6_curlinfo_speed_upload ();
int perl6_curlinfo_header_size ();
int perl6_curlinfo_request_size ();
int perl6_curlinfo_ssl_verifyresult ();
int perl6_curlinfo_filetime ();
int perl6_curlinfo_content_length_download ();
int perl6_curlinfo_content_length_upload ();
int perl6_curlinfo_starttransfer_time ();
int perl6_curlinfo_content_type ();
int perl6_curlinfo_redirect_time ();
int perl6_curlinfo_redirect_count ();
int perl6_curlinfo_private ();
int perl6_curlinfo_http_connectcode ();
int perl6_curlinfo_httpauth_avail ();
int perl6_curlinfo_proxyauth_avail ();
int perl6_curlinfo_os_errno ();
int perl6_curlinfo_num_connects ();
int perl6_curlinfo_ssl_engines ();
int perl6_curlinfo_cookielist ();
int perl6_curlinfo_lastsocket ();
int perl6_curlinfo_ftp_entry_path ();
int perl6_curlinfo_redirect_url ();
int perl6_curlinfo_primary_ip ();
int perl6_curlinfo_appconnect_time ();
int perl6_curlinfo_certinfo ();
int perl6_curlinfo_condition_unmet ();
int perl6_curlinfo_rtsp_session_id ();
int perl6_curlinfo_rtsp_client_cseq ();
int perl6_curlinfo_rtsp_server_cseq ();
int perl6_curlinfo_rtsp_cseq_recv ();
int perl6_curlinfo_primary_port ();
int perl6_curlinfo_local_ip ();
int perl6_curlinfo_local_port ();
int perl6_curlinfo_lastone ();